# fri3d-2022-co2-badge

./: Cargo.toml  LICENSE  README.md
src/: alarm.rs  leds.rs  main.rs  screen.rs
