[package]
name = "fri3d-2022-co2-badge"
version = "0.1.0"
authors = ["Nathan Samson <nathan@nathansamson.be>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
screen = ["dep:mipidsi", 
          "dep:embedded-graphics",
          "dep:display-interface",
          "dep:display-interface-spi",
          "dep:profont",
        ]
alarm = []

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38"
mh-z19c = "0.2.0"
embedded-hal = "1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"

# Feature: screen
# mipidsi = { version = "0.3.0", optional = true }
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "bugfix", optional = true }
embedded-graphics = { optional = true }
display-interface = { optional = true }
display-interface-spi = { optional = true }
profont = { version = "0.6.1", optional = true }



[build-dependencies]
embuild = "0.29"
anyhow = "1"
