[package]
name = "fri3d-2022-co2-badge"
version = "0.1.0"
authors = ["Nathan Samson <nathan@nathansamson.be>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
alarm = []
leds = ["dep:smart-leds", "dep:ws2812-esp32-rmt-driver"]
screen = ["dep:mipidsi", 
          "dep:embedded-graphics",
          "dep:display-interface",
          "dep:display-interface-spi",
          "dep:profont",
        ]


[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38"
# mh-z19c = "0.2.0"
mh-z19c = { git = "https://github.com/nathansamson/mh-z19c.git", branch = "api-additions", features = ["std"]  }
embedded-hal = "1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"

# Feature leds
smart-leds = { version = "0.3.0", optional = true }
ws2812-esp32-rmt-driver = { version = "0.4.0", features = ["smart-leds-trait"], optional = true }

# Feature: screen
mipidsi = { version = "0.3.0", optional = true }
embedded-graphics = { optional = true }
display-interface = { optional = true }
display-interface-spi = { optional = true }
profont = { version = "0.6.1", optional = true }



[build-dependencies]
embuild = "0.29"
anyhow = "1"
